# Pointnet2_PyTorch

./: pyproject.toml
pointnet2_ops_lib/: pyproject.toml  setup.py
pointnet2_ops_lib/pointnet2_ops/: pointnet2_utils.py
